--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <img src="logo.jpg" alt="Logo" style="max-height: 10vh; width: auto;">
     </div>
     <div style="height: 90vh;">
-        <iframe src="https://www.sellema.olx.ro" style="width: 100%; height: 100%; border: none;"></iframe>
+        <iframe src="https://sellema.olx.ro/" style="width: 100%; height: 100%; border: none;"></iframe>
     </div>
 </body>
 </html>
