--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script>
         $(document).ready(function() {
             $.ajax({
-                url: 'https://www.sellema.olx.ro',
+                url: 'https://sellema.olx.ro/',
                 dataType: 'html',
                 success: function(data) {
                     $('#content').html(data);
