--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Sellema ABI - Produse Germania - Racari de jos</title>
+    <title>Sellema ABI - Produse Germania - Racarii de jos</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         #content {
@@ -22,8 +22,9 @@
     </script>
 </head>
 <body>
-    <div style="height: 10vh;">
+   <div style="height: 10vh; text-align: center;">
         <img src="logo.jpg" alt="Logo" style="max-height: 10vh; width: auto;">
+        <b>Sellema ABI - Produse Germania - Racarii de jos</b>
     </div>
     <div id="content"></div>
 </body>
